first crack at adding bidding

--- a/pitch/pitch.css
+++ b/pitch/pitch.css
@@ -92,6 +92,11 @@
     height: 340px;
 }
 
+#currentBid {
+    width: 100px;
+    font-size: larger;
+}
+
 .playertablename {
     font-weight: bold;
 }
